# todo-app

./: .gitignore  README.md  ai_chat_transcript.txt  metadata.txt  pyproject.toml
.github/workflows/: CI.yml
src/todo_app/: __init__.py
src/todo_app/domain/: __init__.py  filters.py  models.py  repositories.py  services.py
src/todo_app/infrastructure/: __init__.py  db.py  models.py  repositories.py
src/todo_app/ui/: __init__.py  helpers.py  streamlit_app.py
tests/: __init__.py  test_domain_services.py  test_sqlalchemy_repo.py  test_ui_helpers.py
