[project]
name = "todo-app"
version = "0.1.0"
description = "Simple TODO app with Streamlit and SQLite"
requires-python = ">=3.12"
dependencies = [
  "streamlit>=1.40.0",
  "sqlalchemy>=2.0.0",
  "pytest>=8.0.0",
  "ruff>=0.6.0",
  "black>=24.0.0",
  "mypy>=1.10.0",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]
